Run NB updater during portal pack installation